# wxo-ai-engineering

./: .gitignore  pyproject.toml
RAG_pipelines/Elasticsearch/: RAG_pipeline_for_ES.md  RAG_pipline_docling_granite_elasticsearch.ipynb  docling_image_preprocess.py  docling_image_to_HTML.md  es_test_connection.ipynb
